unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/CMPL123TMS__Staged_Training_Records__c.object-meta.xml
<CustomObject>
    <description>This object stores the training records of the library items which are in staged status</description>
    <label>Staged Training Record</label>
    <nameField>
        <displayFormat>STR-{00000}</displayFormat>
        <label>Staged Training Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Training Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>