unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/fields/CMPL123TMS__Is_Vacation__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Is_Vacation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Vacation</description>
        <inlineHelpText>Is Vacation</inlineHelpText>
        <label>Employee Status Away</label>
        <type>Checkbox</type>
    </CustomField>