unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/fields/CMPL123TMS__Related_Library_Item__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_Library_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Library Item</description>
        <inlineHelpText>Related Library Item</inlineHelpText>
        <label>Related Library Item</label>
        <referenceTo>CMPL123TMS__Library__c</referenceTo>
        <relationshipLabel>Staged Training Records</relationshipLabel>
        <relationshipName>Staged_Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>