unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/fields/CMPL123TMS__Related_TMS_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_TMS_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related TMS User</label>
        <referenceTo>CMPL123TMS__TMS_User__c</referenceTo>
        <relationshipLabel>Staged Training Records</relationshipLabel>
        <relationshipName>Staged_Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>