unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/fields/CMPL123TMS__Related_User__c.field-meta.xml
<CustomField>
        <fullName>CMPL123TMS__Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related User field is now deprecated.</description>
        <inlineHelpText>Related User</inlineHelpText>
        <label>Related User(To be Deprecated)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Staged_Training_Records</relationshipName>
        <type>Lookup</type>
    </CustomField>