unpackaged/main/default/objects/CMPL123TMS__Staged_Training_Records__c/listViews/CMPL123TMS__All.listView-meta.xml
<ListView>
        <fullName>CMPL123TMS__All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123TMS__Related_Course_Offering__c</columns>
        <columns>CMPL123TMS__Related_Library_Item__c</columns>
        <columns>CMPL123TMS__Related_User__c</columns>
        <columns>CMPL123TMS__Is_Vacation__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CMPL123TMS__Is_Adhoc__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>